package com.leng.analizador.analyzer.models;

public enum State {
    S0,
    S1,
    S2,
    SA,
    SR;

}
